@@ -21,7 +21,7 @@ Other
 
 * Implement the default error handlers in GConfClient
 
-* Envisioneer the vortals
+* Envisioneering
 
 Maybe 1.4
 ===
